--- a/test/test_span_token/test_escape_sequence_emphasis.yml
+++ b/test/test_span_token/test_escape_sequence_emphasis.yml
@@ -1,8 +1,12 @@
 - RawText:
     content: 'some '
+    position: null
 - EscapeSequence:
     children:
     - RawText:
         content: '*'
+        position: null
+    position: null
 - RawText:
     content: text*
+    position: null
